--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,9 @@
 [versions]
 
-# Essentail
-#agp = "8.2.1"
-#core-ktx = "1.12.0"
-#viewmodel-ktx = "2.6.1"
-#core-ktx-version  = "1.5.0"
-#lifecycle-runtime-ktx = "2.7.0"
-#org-jetbrains-kotlin-android = "1.8.10"
 
 
+accompanistSwiperefreshVersion = "0.24.13-rc"
+accompanistSystemuicontrollerVersion = "0.31.3-beta"
 androidGradlePlugin = "8.2.0"
 androidxCore = "1.12.0"
 androidxLifecycle = "2.7.0"
@@ -22,67 +17,61 @@ androidxTest = "1.5.0"
 androidxTestExt = "1.1.5"
 androidxTestRunner = "1.5.2"
 #coroutines = "1.7.2"
+composeMarkdownVersion = "0.4.1"
+coreKtxVersion = "1.5.0"
 coroutines = "1.8.0"
+datastorePreferencesVersion = "1.0.0"
+espressoContribVersion = "3.5.1"
 hilt = "2.51"
-junit = "4.13.2"
+hiltCompiler = "1.1.0"
+hiltCompilerVersion = "2.48.1"
+hiltAndroidVersion = "2.48.1"
+hiltWorkVersion = "1.1.0"
 kotlin = "1.9.0" # "1.9.22"
 
 
 # Worker
+pagingComposeVersion = "3.2.1"
+pagingRuntimeKtxVersion = "3.2.1"
+roomPaging = "2.6.1"
+runnerVersion = "1.0.2"
+rulesVersion = "1.0.2"
 work-ktx = "2.8.0"
 
-## UI ##
-#activity-compose = "1.8.2"
-#compose-bom = "2023.08.00"
 lottie_compose_version = "4.0.0"
 
 ## accompanist
 accompanistPagerVersion = "0.31.6-rc"
 accompanistInsetsVersion = "0.31.5-beta"
 
-## Navigation
-#navigation-compose = "2.7.4"
 
 #Test
-#junit = "4.13.2"
-#espresso-core = "3.5.1"
-#hamcrestVersion = "2.2"
-#mockitoVersion = "2.13.0"
-#robolectricVersion = "4.8"
-#junit-ktx-version  = "1.1.5"
-#googleTruthVersion = "1.1.3"
-#mockitoInlineVersion = "5.2.0"
-#mockitoKotlinVersion = "5.1.0"
-#mockwebserver_version = "4.9.1"
-#core-testing-version  = "2.2.0"
-#coroutinesTestVersion = "1.7.1"
-#androidx-test-ext-junit = "1.1.5"
+junit = "4.13.2"
+espresso-core = "3.5.1"
+hamcrestVersion = "2.2"
+mockitoVersion = "2.13.0"
+robolectricVersion = "4.8"
+junit-ktx-version  = "1.1.5"
+googleTruthVersion = "1.1.3"
+mockitoInlineVersion = "5.2.0"
+mockitoKotlinVersion = "5.1.0"
+mockwebserver_version = "4.9.1"
+core-testing-version  = "2.2.0"
+coroutinesTestVersion = "1.7.1"
+androidx-test-ext-junit = "1.1.5"
 
-## DI
-#hilt_android = "2.48.1"
-#hilt = "1.0.0"
 
 # Network
 retrofit_interceptor = "4.9.3"
 retrofit = "2.9.0"
 coil = "2.4.0"
-
-# Presistant Data
-#room = "2.5.2"
+coreVersion = "1.41.0"
 
 
 [libraries]
-#core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
-
 # UI
-#ui = { group = "androidx.compose.ui", name = "ui" }
-#ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-#ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-#material3 = { group = "androidx.compose.material3", name = "material3" }
-#ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-#activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
-#compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
-
+accompanist-swiperefresh = { module = "com.google.accompanist:accompanist-swiperefresh", version.ref = "accompanistSwiperefreshVersion" }
+accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanistSystemuicontrollerVersion" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidxCore" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidxActivity" }
 androidx-compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "androidxComposeCompiler" }
@@ -92,28 +81,29 @@ androidx-compose-ui = { group = "androidx.compose.ui", name = "ui"}
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview"}
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4"}
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling"}
+androidx-espresso-contrib = { module = "androidx.test.espresso:espresso-contrib", version.ref = "espressoContribVersion" }
+androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hiltCompiler" }
+androidx-hilt-work = { module = "androidx.hilt:hilt-work", version.ref = "hiltWorkVersion" }
+androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidxLifecycle" }
+androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidxLifecycle" }
+androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
+
 
 # Third UI
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferencesVersion" }
+androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingComposeVersion" }
+androidx-paging-runtime-ktx = { module = "androidx.paging:paging-runtime-ktx", version.ref = "pagingRuntimeKtxVersion" }
+compose-markdown = { module = "com.github.jeziellago:compose-markdown", version.ref = "composeMarkdownVersion" }
+core-ktx = { module = "androidx.test:core-ktx", version.ref = "coreKtxVersion" }
+hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltCompilerVersion" }
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroidVersion" }
+room-paging = { module = "androidx.room:room-paging", version.ref = "roomPaging" }
+runner = { module = "com.android.support.test:runner", version.ref = "runnerVersion" }
+rules = { module = "com.android.support.test:rules", version.ref = "rulesVersion" }
 ui-lottie-compose = { group = "com.airbnb.android", name = "lottie-compose", version.ref = "lottie_compose_version" }
-
-#  Coroutines & ViewModel
-#coroutines-android = { group = "org.jetbrains.kotlinx",name = "kotlinx-coroutines-android", version.ref = "coroutines"}
-#coroutines-core = { group = "org.jetbrains.kotlinx",name = "kotlinx-coroutines-core", version.ref = "coroutines"}
-#viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref  = "viewmodel-ktx"}
-#lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 
 # Worker
 workManager  = { group = "androidx.work", name = "work-runtime-ktx", version.ref  = "work-ktx"}
-
-# Navigation
-#navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation-compose"}
-
-# Dagger/Hilt
-#hilt-android  ={ group = "com.google.dagger",name = "hilt-android",version.ref = "hilt_android"}
-#hilt-compiler = {group = "com.google.dagger", name = "hilt-compiler" ,version.ref = "hilt_android"}
-#hilt-work = {group = "androidx.hilt", name = "hilt-work" ,version.ref = "hilt"}
-#androidx-hilt-compiler = {group = "androidx.hilt", name = "hilt-compiler" ,version.ref = "hilt"}
-#hilt-navigation-compose = {group = "androidx.hilt", name = "hilt-navigation-compose" ,version.ref = "hilt"}
 
 # Coil
 coil = { group = "io.coil-kt",name = "coil",version.ref = "coil"}
@@ -134,67 +124,54 @@ accompanist_pager = {  group = "com.google.accompanist",name = "accompanist-page
 accompanist-insets = {  group = "com.google.accompanist",name = "accompanist-insets",version.ref = "accompanistInsetsVersion"}
 
 ## Test ##
+androidx-test-core = { module = "androidx.test:core", version.ref = "androidxTest" }
+androidx-test-runner = { module = "androidx.test:runner", version.ref = "androidxTestRunner" }
 
 # Espresso
-#espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
+espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 
 # Manifest
-#ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 
 # Coroutine
-#test-coroutineTest = {group =  "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutinesTestVersion" }
+test-coroutineTest = {group =  "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutinesTestVersion" }
 
 # Core
-#test-core_ktx_test = { group =  "androidx.test", name = "core-ktx", version.ref = "core-ktx-version" }
-#test-core_testing = { group =  "androidx.arch.core", name = "core-testing", version.ref = "core-testing-version" }
+test-core_testing = { group =  "androidx.arch.core", name = "core-testing", version.ref = "core-testing-version" }
 
 # Junit
-#junit = { group = "junit", name = "junit", version.ref = "junit" }
-#ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-#androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
-#test-junit_ktx_test= { group =  "androidx.test.ext", name = "junit-ktx", version.ref = "junit-ktx-version" }
+junit = { module = "junit:junit", version.ref = "junit" }
+ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
+test-junit_ktx_test= { group =  "androidx.test.ext", name = "junit-ktx", version.ref = "junit-ktx-version" }
 
 # Navigation
-#test-navigation-compose  = { group ="androidx.navigation", name = "navigation-testing", version.ref = "navigation-compose" }
-
-#GoogleTruth   https://truth.dev
-#test-googleTruth = {group =  "com.google.truth", name = "truth", version.ref = "googleTruthVersion" }
-
-# Hamcrest
-#test-hamcrest = {group =  "org.hamcrest", name = "hamcrest", version.ref = "hamcrestVersion"}
-#test-hamcrest_library = {group =  "org.hamcrest", name = "hamcrest-library", version.ref = "hamcrestVersion"}
-
-# Rebolectric
-#test-robolectric = {group =  "org.robolectric", name = "robolectric", version.ref = "robolectricVersion" }
-
-# Mock
-#test-mockito = {group =  "org.mockito", name = "mockito-core", version.ref = "mockitoVersion" }
-#test-mockitoAndroid = {group =  "org.mockito", name = "mockito-android", version.ref = "mockitoVersion" }
-#test-mockitoInline= {group =  "org.mockito", name = "mockito-inline", version.ref = "mockitoInlineVersion" }
-#test-mockitoKotlin = {group =  "org.mockito.kotlin", name = "mockito-kotlin", version.ref = "mockitoKotlinVersion" }
-#test-mockwebserver = { group = "com.squareup.okhttp3", name = "mockwebserver", version.ref = "mockwebserver_version"}
-
-
-
-
-
-androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest"}
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidxHilt" }
-androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidxLifecycle" }
-androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidxLifecycle" }
-androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidxNavigation" }
 
-androidx-test-core = { module = "androidx.test:core", version.ref = "androidxTest" }
-androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "androidxTestExt" }
-androidx-test-runner = { module = "androidx.test:runner", version.ref = "androidxTestRunner" }
-hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
-hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
+#GoogleTruth   https://truth.dev
+test-googleTruth = {group =  "com.google.truth", name = "truth", version.ref = "googleTruthVersion" }
+
+# Hamcrest
+test-hamcrest = {group =  "org.hamcrest", name = "hamcrest", version.ref = "hamcrestVersion"}
+test-hamcrest_library = {group =  "org.hamcrest", name = "hamcrest-library", version.ref = "hamcrestVersion"}
+
+# Rebolectric
+test-robolectric = {group =  "org.robolectric", name = "robolectric", version.ref = "robolectricVersion" }
+
+# Mock
+test-mockito = {group =  "org.mockito", name = "mockito-core", version.ref = "mockitoVersion" }
+test-mockitoAndroid = {group =  "org.mockito", name = "mockito-android", version.ref = "mockitoVersion" }
+test-mockitoInline= {group =  "org.mockito", name = "mockito-inline", version.ref = "mockitoInlineVersion" }
+test-mockitoKotlin = {group =  "org.mockito.kotlin", name = "mockito-kotlin", version.ref = "mockitoKotlinVersion" }
+test-mockwebserver = { group = "com.squareup.okhttp3", name = "mockwebserver", version.ref = "mockwebserver_version"}
+
+# DI Test
 hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
-hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
-hilt-gradle-plugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hilt" }
-junit = { module = "junit:junit", version.ref = "junit" }
-kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
+core = { group = "com.google.ar", name = "core", version.ref = "coreVersion" }
+
+
+
 
 
 
